--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI = mongodb+srv://admin:admin123@interview.gyylild.mongodb.net/?retryWrites=true&w=majority&appName=Interview
 
+GROQ_API_KEY = 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
